--- a/index2.html
+++ b/index2.html
@@ -6,13 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:700,400' rel='stylesheet' type='text/css'>
 
-	<style type="text/css">
-	body {color: #3c3c3b; font-family: 'Raleway', sans-serif; text-decoration: none; list-style: none;}
-	</style>
-
 </head>
 
-<body>
+<body style="color: #3c3c3b; font-family: 'Raleway', sans-serif; text-decoration: none; list-style: none;">
 	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodytable">
 
 		<tr>
@@ -77,18 +73,16 @@
 						</td>
 					</tr>
 
-					<tr><td align="center" style="padding-bottom:0;">
-						<a href="https://instagram.com/fuzmoapp/" target="blank" style="padding:0 20px;"><img src="assets/instagram-icon.png"></a>
-						<a href="https://twitter.com/Fuzmo?lang=en-gb" target="blank" style="padding:0 20px;"><img src="assets/twitter-icon.png"></a>
-						<a href="https://fuzfeed.com/" target="blank" style="padding:0 20px;"><img src="assets/fuzfeed-icon.png"></a>
-						<a href="https://www.facebook.com/fuzmoapp?fref=ts" target="blank" style="padding:0 20px;"><img src="assets/facebook-icon.png"></a>
-						<a href="https://www.youtube.com/channel/UCbQk6AAx5Zz4VG8L3p103eg" target="blank" style="padding:0 20px;"><img src="assets/youtube-icon.png"></a>
-					</td></tr>
 
 					<tr>
-						<td background="assets/bottom-banner-bg.jpg" height="50px" align="center"></td>
+						<td background="assets/bottom-banner-bg.jpg" style="background-repeat: no-repeat; background-position: bottom;" height="100px" align="center" align="center" style="padding-bottom:0;">
+							<a href="https://instagram.com/fuzmoapp/" target="blank" style="padding:0 20px;"><img src="assets/instagram-icon.png"></a>
+							<a href="https://twitter.com/Fuzmo?lang=en-gb" target="blank" style="padding:0 20px;"><img src="assets/twitter-icon.png"></a>
+							<a href="https://fuzfeed.com/" target="blank" style="padding:0 20px;"><img src="assets/fuzfeed-icon.png"></a>
+							<a href="https://www.facebook.com/fuzmoapp?fref=ts" target="blank" style="padding:0 20px;"><img src="assets/facebook-icon.png"></a>
+							<a href="https://www.youtube.com/channel/UCbQk6AAx5Zz4VG8L3p103eg" target="blank" style="padding:0 20px;"><img src="assets/youtube-icon.png"></a>
+						</td>
 					</tr>
-
 				</table>
 			</td>
 		</tr>
